--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ iframe { max-width: 100%; }
 
         <!-- Testimonials Start -->
         <div id="testimonials">
-            <div class="container">
+             <div class="container">
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
                         <div class="testimonial-img">
@@ -625,7 +625,7 @@ iframe { max-width: 100%; }
                             <h3>YUSWARNANA</h3>
                             <h4>Science technician</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra at massa sit amet ultricies. Nullam consequat, mauris non interdum cursus.
+                                Ben-PD has consistently demonstrated exceptional technical competence and reliability across every project we’ve collaborated on. Their integrated engineering approach, rapid response, and strong commitment to quality have significantly improved the performance and stability of our operational systems. Ben-PD delivers not just solutions, but confidence. We highly value their expertise and look forward to continued partnership.
                             </p>
                         </div>
                     </div>
@@ -638,7 +638,7 @@ iframe { max-width: 100%; }
                             <h3>DIAN FEBRY</h3>
                             <h4>Industrial relations manager</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra at massa sit amet ultricies. Nullam consequat, mauris non interdum cursus.
+                                Ben-PD has been a trusted partner that consistently delivers dependable support and high-quality engineering solutions. Their professionalism, clear communication, and strong commitment to meeting project requirements have made collaboration seamless and efficient. Ben-PD’s ability to integrate technical excellence with responsive service has created real value for our operations, and we appreciate their continued reliability.
                             </p>
                         </div>
                     </div>
@@ -651,7 +651,7 @@ iframe { max-width: 100%; }
                             <h3>ROSIHAN ANWAR</h3>
                             <h4>PROJECT MANAGER</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra at massa sit amet ultricies. Nullam consequat, mauris non interdum cursus.
+                                Working with Ben-PD has consistently been a smooth and results-driven experience. Their technical expertise, structured project execution, and commitment to meeting timelines have played a crucial role in ensuring project success. Ben-PD brings clarity, reliability, and strong engineering capability—attributes that make them a valuable partner in any critical project environment.
                             </p>
                         </div>
                     </div>
